--- a/settings.gradle
+++ b/settings.gradle
@@ -2,4 +2,5 @@ rootProject.name = 'kodilla-course'
 include 'kodilla-spring'
 include 'kodilla-spring-web'
 include 'kodilla-patterns'
+include 'kodilla-testing'
 
