--- a/settings.gradle
+++ b/settings.gradle
@@ -3,4 +3,5 @@ include 'kodilla-spring'
 include 'kodilla-spring-web'
 include 'kodilla-patterns'
 include 'kodilla-testing'
+include 'kodilla-jdbc'
 
