--- a/settings.gradle
+++ b/settings.gradle
@@ -4,4 +4,6 @@ include 'kodilla-spring-web'
 include 'kodilla-patterns'
 include 'kodilla-testing'
 include 'kodilla-jdbc'
+include 'kodilla-sudoku'
+include 'kodilla-hibernate'
 
