--- a/settings.gradle
+++ b/settings.gradle
@@ -6,4 +6,5 @@ include 'kodilla-testing'
 include 'kodilla-jdbc'
 include 'kodilla-sudoku'
 include 'kodilla-hibernate'
+include 'kodilla-patterns2'
 
