--- a/settings.gradle
+++ b/settings.gradle
@@ -7,4 +7,5 @@ include 'kodilla-jdbc'
 include 'kodilla-sudoku'
 include 'kodilla-hibernate'
 include 'kodilla-patterns2'
+include 'kodilla-testing2'
 
